api-gateway/infrastructure/api-gateway-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: api-gateway
        component: gateway
    spec:
      containers:
      - name: api-gateway-app
        image: kubernetes.service.discovery/tutorial/api-gateway:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 512Mi
            cpu: 300m
          limits:
            memory: 1024Mi
            cpu: 1500m
        ports:
        - name: web
          containerPort: 8080
          #        readinessProbe:
          #          httpGet:
          #            path: /management/health
          #            port: web
          #          initialDelaySeconds: 40
          #        livenessProbe:
          #          httpGet:
          #            path: /management/health
          #            port: web
          #          initialDelaySeconds: 60
