api-gateway/infrastructure/api-gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway-ui
  labels:
    app: api-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: api-gateway
            servicePort: web
